Test conversion rates and fix overlap

--- a/my-react-app/src/pages/home/home.css
+++ b/my-react-app/src/pages/home/home.css
@@ -34,7 +34,7 @@
 }
 
 .temperature {
-    margin-top: -20px;
+    margin-top: -8px;
 }
 
 .flag-icon.weather {
